--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 Predicts Social Network Size in Humans</h4>
                             <p class="card-text"></p>
                             <div class="text-center">
-                                <a href="pages/index1.html" class="btn btn-success">Link</a>
+                                <a href="pages/additionalpage.html" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
