--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 Predicts Social Network Size in Humans</h4>
                             <p class="card-text"></p>
                             <div class="text-center">
-                                <a href="pages/additionalpage.html" class="btn btn-success">Link</a>
+                                <a href="pages/additionalpage.html" class="btn btn-success">Read</a>
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                                 Connectivity in Human Amygdala–Prefrontal Circuitry</h4>
                             <p class="card-text"></p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Read</a>
                             </div>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                                 coeruleus neurons</h4>
                             <p class="card-text"></p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="#" class="btn btn-success">Read</a>
                             </div>
                         </div>
                     </div>
